--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
     <div id="sub-footer" class="flex flex-col gap-6 items-center justify-center my-12">
         <div class="flex gap-2 items-center ">
             <img class="w-4 h-4" src="./assets/asset 37.svg" alt="Y-combinator">
-            <p class="text-sm text-gray-600">A Y Combinator company.</p>
+            <p class="text-sm text-gray-600">Saurav Shandilya❤️.</p>
         </div>
         <p class="text-sm text-gray-400">© 2024 ToDesktop, Inc. All rights reserved.</p>
     </div>
